# cloudflare-ssh-homelab-test

./: .coverage  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ssh.yml
html/: index.html
jenkins/: Jenkinsfile
jenkins/scripts/: build.sh  deploy.sh  install_tools.sh  lint.sh  remote_deploy.sh  tests.sh
src/: main.py
src/api/v1/: endpoints.py
src/core/: config.py
src/homelab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: schemas.py
src/services/: item_service.py
tests/unit/: test_config.py  test_endpoints.py  test_item_service.py  test_main.py  test_schemas.py  test_session.py
