[project]
name = "homelab-api"
version = "0.1.0"
description = "A simple FastAPI application for the homelab."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
    "pytest-cov>=4.1.0",
    "pip-audit>=2.9.0",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]

